--- a/JoitCode.Shuttle.SimpleContract/JoitCode.Shuttle.SimpleContract.csproj
+++ b/JoitCode.Shuttle.SimpleContract/JoitCode.Shuttle.SimpleContract.csproj
@@ -2,19 +2,18 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{85892D64-7A76-4774-BD31-77853F1BFA07}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{F61DB889-8B4D-4AA0-A35E-9EC45D67FD9E}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JoitCode.Shuttle.SimpleSample</RootNamespace>
-    <AssemblyName>JoitCode.Shuttle.SimpleSample</AssemblyName>
+    <RootNamespace>JoitCode.Shuttle.SimpleContract</RootNamespace>
+    <AssemblyName>JoitCode.Shuttle.SimpleContract</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,8 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,21 +31,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="JointCode.Shuttle, Version=0.9.5.0, Culture=neutral, PublicKeyToken=c79dda2cb93d4335, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="JointCode.Shuttle">
       <HintPath>..\packages\JointCode.Shuttle.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="ISimpleService2.cs" />
+    <Compile Include="SimpleRemoteServiceEnd.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\JoitCode.Shuttle.SimpleContract\JoitCode.Shuttle.SimpleContract.csproj">
-      <Project>{F61DB889-8B4D-4AA0-A35E-9EC45D67FD9E}</Project>
-      <Name>JoitCode.Shuttle.SimpleContract</Name>
-    </ProjectReference>
+    <Compile Include="ShuttleDomainHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
