--- a/JoitCode.Shuttle.Sample.ServiceEnd2/JoitCode.Shuttle.Sample.ServiceEnd2.csproj
+++ b/JoitCode.Shuttle.Sample.ServiceEnd2/JoitCode.Shuttle.Sample.ServiceEnd2.csproj
@@ -48,6 +48,10 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(TargetDir)*.dll" "$(SolutionDir)\JoitCode.Shuttle.Sample\bin\$(ConfigurationName)\"/y
+xcopy "$(TargetDir)*.pdb" "$(SolutionDir)\JoitCode.Shuttle.Sample\bin\$(ConfigurationName)\"/y</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
